// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Body renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  font-size: 1rem;
  color: black;
  font-weight: 300;
  white-space: pre-wrap;
}

<span
  className="c0"
  color="black"
  fontSize="16px"
>
  This is some body text.
</span>
`;

exports[`Text Heading with level 1 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  font-size: 2.125rem;
  line-height: 2.9375rem;
  font-weight: bold;
  color: black;
}

<h1
  className="c0"
  color="black"
>
  This is a heading
</h1>
`;

exports[`Text Heading with level 2 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  font-size: 1.875rem;
  line-height: 2.625rem;
  font-weight: bold;
  color: black;
}

<h2
  className="c0"
  color="black"
>
  This is a heading
</h2>
`;

exports[`Text Heading with level 3 renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
  font-size: 1.5rem;
  line-height: 2.125rem;
  font-weight: 500;
  color: black;
}

<h3
  className="c0"
  color="black"
>
  This is a heading
</h3>
`;

exports[`Text Link renders correctly 1`] = `
.c0 {
  padding: 0;
  margin: 0;
}

<a
  className="c0"
>
  This is a link
</a>
`;
